Fixed type not showing on view task popup

--- a/CSS/backlog.css
+++ b/CSS/backlog.css
@@ -300,6 +300,29 @@
     grid-column: 2;
 }
 
+.task-type-details {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 8px;
+    row-gap: 8px;
+}
+
+.task-pair {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5px;
+}
+
+.task-type-name {
+    justify-self: right;
+}
+
+.task-type-color {
+    border: 1px solid black;
+    width: 15px;
+    height: 15px;
+}
+
 /* Filter Popup */
 .filter-popup {
     position: fixed;
